Added database login